<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal700"
    android:padding="8dp"
    tools:context=".view.FragmentQuiz">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal"
        android:padding="8dp"
        app:layout_constraintBottom_toTopOf="@+id/textViewQuestionNumber"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/correct_text"
            android:textColor="@color/white"
            android:textSize="20dp">

        </TextView>

        <TextView
            android:id="@+id/textViewCorrectNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/correct_number"
            android:textColor="@color/white"
            android:textSize="20dp">

        </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/empty_text"
            android:textColor="@color/white"
            android:textSize="20dp">

        </TextView>

        <TextView
            android:id="@+id/textViewEmptyNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/empty_number"
            android:textColor="@color/white"
            android:textSize="20dp">

        </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/wrong_text"
            android:textColor="@color/white"
            android:textSize="20dp">

        </TextView>

        <TextView
            android:id="@+id/textViewWrongNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/wrong_number"
            android:textColor="@color/white"
            android:textSize="20dp">

        </TextView>


    </LinearLayout>

    <TextView
        android:id="@+id/textViewQuestionNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="18dp"
        android:text="@string/question_number"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="48dp"
        android:text="@string/question_text"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/imageViewFlag"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewQuestionNumber" />

    <ImageView
        android:id="@+id/imageViewFlag"
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:scaleType="centerCrop"
        android:src="@drawable/argentina"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewFlag">

        <Button
            android:id="@+id/buttonA"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:text="@string/button_option"
            android:textColor="@color/yellow"
            android:textSize="20sp"
            app:cornerRadius="10dp" />

        <Button
            android:id="@+id/buttonB"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="30dp"
            android:text="@string/button_option"
            android:textColor="@color/yellow"
            android:textSize="20sp"
            app:cornerRadius="10dp" />

        <Button
            android:id="@+id/buttonC"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="30dp"
            android:text="@string/button_option"
            android:textColor="@color/yellow"
            android:textSize="20sp"
            app:cornerRadius="10dp" />

        <Button
            android:id="@+id/buttonD"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="30dp"
            android:text="@string/button_option"
            android:textColor="@color/yellow"
            android:textSize="20sp"
            app:cornerRadius="10dp" />
    </LinearLayout>

    <Button
        android:id="@+id/buttonNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="248dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="@color/pink"
        android:drawableEnd="@drawable/next"
        android:text="@string/button_next"
        android:textSize="20sp"
        android:textStyle="bold"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

</androidx.constraintlayout.widget.ConstraintLayout>